--- a/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dts
@@ -27,7 +27,7 @@
 &adc1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_adc1>;
-	adc-ch-list = <4>;
+	adc-ch-list = <4 5>;
 	status = "okay";
 };
 
@@ -44,14 +44,33 @@
 		compatible = "spidev";
 		spi-max-frequency = <1000000>;
 	};
+	spidev@1 {
+		reg = <1>;
+		compatible = "spidev";
+		spi-max-frequency = <1000000>;
+	};
+	spidev@2 {
+		reg = <2>;
+		compatible = "spidev";
+		spi-max-frequency = <1000000>;
+	};
+};
+
+&ecspi2 {
+	status = "okay";
+
+	/*
+        * Add your slave devices here. Next is an example of spidev.
+        * Expect a harmless kernel warning if you enable spidev as slave.
+        */
+	spidev@0 {
+		reg = <0>;
+		compatible = "spidev";
+		spi-max-frequency = <1000000>;
+	};
 };
 
 &fec1 {
-	status = "okay";
-};
-
-/* CAN1 (Raspberry PI Expansion header) */
-&can1 {
 	status = "okay";
 };
 
@@ -62,7 +81,7 @@
 
 /* MCA IO0 connected to Grove ADC connector */
 &mca_adc {
-	digi,adc-ch-list = <0>;
+	digi,adc-ch-list = <0 4>;
 	digi,adc-vref = <3000000>;
 };
 
@@ -75,6 +94,18 @@
 
 /* PWM1 (Raspberry PI Expansion header) */
 &pwm1 {
+	status = "okay";
+};
+
+&pwm6 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm6>;
+	status = "okay";
+};
+
+&pwm8 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm8>;
 	status = "okay";
 };
 
@@ -96,11 +127,6 @@
 	status = "okay";
 };
 
-/* USDHC2 (microSD) */
-&usdhc2 {
-	status = "okay";
-};
-
 /* Pin mux configuration */
 &iomuxc {
 	pinctrl-0 =  <&pinctrl_hog>, <&pinctrl_expansion>;
@@ -110,6 +136,20 @@
 			fsl,pins = <
 				/* GPIO1_4/ADC1_IN4 (pin 7 of the expansion header) */
 				MX6UL_PAD_GPIO1_IO04__GPIO1_IO04        0xb0
+				/* GPIO1_5/ADC1_IN5 (pin 29 of the expansion header) */
+				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05        0xb0
+			>;
+		};
+	
+		pinctrl_pwm6: pwm6grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TDI__PWM6_OUT		0x10b0
+			>;
+		};
+	
+		pinctrl_pwm8: pwm8grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TRST_B__PWM8_OUT		0x10b0
 			>;
 		};
 
@@ -125,7 +165,7 @@
 				/* GPIO3_4 */
 				MX6UL_PAD_LCD_RESET__GPIO3_IO04		0xf030
 				/* JTAG_TDI/GPIO1_13 */
-				MX6UL_PAD_JTAG_TDI__GPIO1_IO13		0x1b0b0
+				/*MX6UL_PAD_JTAG_TDI__GPIO1_IO13	0x1b0b0 */
 				/* GPIO3_10_PROT */
 				MX6UL_PAD_LCD_DATA05__GPIO3_IO10	0x1b0b0
 				/* JTAG_MOD/GPIO1_10 */
@@ -135,9 +175,9 @@
 				/* GPIO3_12_PROT */
 				MX6UL_PAD_LCD_DATA07__GPIO3_IO12	0x1b0b0
 				/* PWM2/I2C3_SCL_PROT */
-				MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x1b0b0
+				/* MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x1b0b0 */
 				/* RASPBERRY_29/GPIO5 */
-				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0
+				/* MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0 */
 				/* PWM4_PROT */
 				MX6UL_PAD_LCD_DATA03__GPIO3_IO08	0x1b0b0
 				/* GPIO3_7/PWM3_PROT */
@@ -147,11 +187,16 @@
 				/* RASPBERRY_36/CSI_MCLK */
 				MX6UL_PAD_CSI_MCLK__GPIO4_IO17		0x1b0b0
 				/* RASPBERRY_37/CSI_PIXCLK */
-				MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x1b0b0
+				/* MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x1b0b0 */
 				/* JTAG_nTRST/GPIO1_15 */
-				MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15	0x1b0b0
+				/*MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15	0x1b0b0 */
 				/* JTAG_TCK/GPIO1_14 */
 				MX6UL_PAD_JTAG_TCK__GPIO1_IO14		0x1b0b0
+
+				MX6UL_PAD_LCD_DATA08__GPIO3_IO13	0x1b0b0
+				MX6UL_PAD_LCD_DATA09__GPIO3_IO14	0x1b0b0
+				MX6UL_PAD_CSI_VSYNC__GPIO4_IO19		0x1b0b0
+				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0
 			>;
 		};
 	};
