--- a/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dtsi
@@ -17,8 +17,8 @@
 
 /* ECSPI3 (Raspberry PI Expansion header) */
 &ecspi3 {
-	num-cs = <3>;
-	cs-gpios = <&gpio1 20 GPIO_ACTIVE_LOW>, <&gpio3 06 GPIO_ACTIVE_LOW>, <&gpio4 18 GPIO_ACTIVE_LOW>;
+	num-cs = <1>;
+	cs-gpios = <&gpio1 20 GPIO_ACTIVE_LOW>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi3_master>;
 	status = "disabled";
@@ -127,7 +127,6 @@
 
 &iomuxc {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_hog>;
 
 	imx6ul-ccimx6ul {
 		pinctrl_ecspi3_master: ecspi3grp1 {
@@ -136,8 +135,8 @@
 				MX6UL_PAD_UART2_CTS_B__ECSPI3_MOSI	0x10b0
 				MX6UL_PAD_UART2_RTS_B__ECSPI3_MISO	0x10b0
 				MX6UL_PAD_UART2_TX_DATA__GPIO1_IO20	0x10b0 /* Chip Select */
-				MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x10b0 /* Chip Select */
-				MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x10b0 /* Chip Select */
+				/*MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x10b0 /* Chip Select */
+				/*MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x10b0 /* Chip Select */
 			>;
 		};
 
@@ -223,16 +222,6 @@
 			fsl,pins = <
 				MX6UL_PAD_UART5_TX_DATA__UART5_DCE_TX	0x1b0b1
 				MX6UL_PAD_UART5_RX_DATA__UART5_DCE_RX	0x1b0b1
-			>;
-		};
-
-		/* General purpose pinctrl */
-		pinctrl_hog: hoggrp {
-			fsl,pins = <
-				/* USER_LED */
-				MX6UL_PAD_LCD_DATA06__GPIO3_IO11	0x1b0b0
-				/* USER_BUTTON */
-				MX6UL_PAD_LCD_VSYNC__GPIO3_IO03		0x1b0b0
 			>;
 		};
 
