--- a/arch/arm/boot/dts/imx6ul-ccimx6ulstarter-wb.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulstarter-wb.dts
@@ -44,16 +44,6 @@
 		compatible = "spidev";
 		spi-max-frequency = <1000000>;
 	};
-	spidev@1 {
-		reg = <1>;
-		compatible = "spidev";
-		spi-max-frequency = <1000000>;
-	};
-	spidev@2 {
-		reg = <2>;
-		compatible = "spidev";
-		spi-max-frequency = <1000000>;
-	};
 };
 
 &ecspi2 {
@@ -162,41 +152,45 @@
 				 * want to use as GPIO (requires disabling the
 				 * driver that manages them).
 				 */
-				/* GPIO3_4 */
+				/* Digital (LED) LATCH pin59 */
 				MX6UL_PAD_LCD_RESET__GPIO3_IO04		0xf030
-				/* JTAG_TDI/GPIO1_13 */
-				/* MX6UL_PAD_JTAG_TDI__GPIO1_IO13	0x1b0b0 */
-				/* GPIO3_10_PROT */
+				/* PWM6 CP2 pin41 */
+				/*MX6UL_PAD_JTAG_TDI__GPIO1_IO13	0x1b0b0 */
+				/* Сигнал чтения карты (OUT4) pin64 */
 				MX6UL_PAD_LCD_DATA05__GPIO3_IO10	0x1b0b0
-				/* JTAG_MOD/GPIO1_10 */
+				/* Датчик открытия дверей (IN4) pin33 */
 				MX6UL_PAD_JTAG_MOD__GPIO1_IO10		0x1b0b0
-				/* JTAG_TMS/GPIO1_11 */
+				/* Замок розетки (actuator) (OUT1) pin34 */
 				MX6UL_PAD_JTAG_TMS__GPIO1_IO11		0x1b0b0
-				/* GPIO3_12_PROT */
-				MX6UL_PAD_LCD_DATA07__GPIO3_IO12	0x1b0b0
-				/* PWM2/I2C3_SCL_PROT */
+				/* (Подтянут на +) не используется pin63 */
+				/*MX6UL_PAD_LCD_DATA07__GPIO3_IO12	0x1b0b0 */
+				/* Не используется pin68 */
 				/* MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x1b0b0 */
-				/* RASPBERRY_29/GPIO5 */
+				/* ADC CP 1 (i.MX6UL ADC channel 5) pin18 */
 				/* MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0 */
-				/* PWM4_PROT */
+				/* Digital (LED) CLOCK pin61 */
 				MX6UL_PAD_LCD_DATA03__GPIO3_IO08	0x1b0b0
-				/* GPIO3_7/PWM3_PROT */
+				/* 3G Modem Power on/off PWM3 pin66 */
 				MX6UL_PAD_LCD_DATA02__GPIO3_IO07	0x1b0b0
-				/* JTAG_TDO/GPIO1_12 */
+				/* Замок розетки (actuator) (OUT2) pin39 */
 				MX6UL_PAD_JTAG_TDO__GPIO1_IO12		0x1b0b0
-				/* RASPBERRY_36/CSI_MCLK */
+				/* IRQ SPI2. Управление автоматом (OUT) pin14 */
 				MX6UL_PAD_CSI_MCLK__GPIO4_IO17		0x1b0b0
-				/* RASPBERRY_37/CSI_PIXCLK */
-				/* MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x1b0b0 */
-				/* JTAG_nTRST/GPIO1_15 */
-				/* MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15	0x1b0b0 */
-				/* JTAG_TCK/GPIO1_14 */
+				/* Управление OE для LED pin15 */
+				MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x1b0b0
+				/* PWM CP1 chip2 pin42 */
+				/*MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15	0x1b0b0 */
+				/* IRQ FAULT (IN) pin40 */
 				MX6UL_PAD_JTAG_TCK__GPIO1_IO14		0x1b0b0
-
+				/* Датчик удар/вибрации (IN1) / CAN pin10 */
 				MX6UL_PAD_LCD_DATA08__GPIO3_IO13	0x1b0b0
+				/* Датчик температуры (IN2) / CAN pin11 */
 				MX6UL_PAD_LCD_DATA09__GPIO3_IO14	0x1b0b0
+				/* Кнопка замка бытовой розетки (IN3) pin21 */
 				MX6UL_PAD_CSI_VSYNC__GPIO4_IO19		0x1b0b0
+				/* IRQ SPI3 pin17 */
 				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0
+
 			>;
 		};
 	};
