--- a/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dtsi
@@ -127,6 +127,7 @@
 
 &iomuxc {
 	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hog>;
 
 	imx6ul-ccimx6ul {
 		pinctrl_ecspi3_master: ecspi3grp1 {
@@ -222,6 +223,16 @@
 			fsl,pins = <
 				MX6UL_PAD_UART5_TX_DATA__UART5_DCE_TX	0x1b0b1
 				MX6UL_PAD_UART5_RX_DATA__UART5_DCE_RX	0x1b0b1
+			>;
+		};
+
+		/* General purpose pinctrl */
+		pinctrl_hog: hoggrp {
+			fsl,pins = <
+				/* Замок розетки бытовой(actuator) (OUT3) pin62 /USER_LED */
+				MX6UL_PAD_LCD_DATA06__GPIO3_IO11	0x1b0b0
+				/* Digital (LED) DATA pin67 /USER_BUTTON */
+				MX6UL_PAD_LCD_VSYNC__GPIO3_IO03		0x1b0b0
 			>;
 		};
 
