--- a/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dts
@@ -27,7 +27,7 @@
 &adc1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_adc1>;
-	adc-ch-list = <4>;
+	adc-ch-list = <4 5>;
 	status = "okay";
 };
 
@@ -46,12 +46,21 @@
 	};
 };
 
-&fec1 {
+&ecspi2 {
 	status = "okay";
+
+	/*
+        * Add your slave devices here. Next is an example of spidev.
+        * Expect a harmless kernel warning if you enable spidev as slave.
+        */
+	spidev@0 {
+		reg = <0>;
+		compatible = "spidev";
+		spi-max-frequency = <1000000>;
+	};
 };
 
-/* CAN1 (Raspberry PI Expansion header) */
-&can1 {
+&fec1 {
 	status = "okay";
 };
 
@@ -62,7 +71,7 @@
 
 /* MCA IO0 connected to Grove ADC connector */
 &mca_adc {
-	digi,adc-ch-list = <0>;
+	digi,adc-ch-list = <0 4>;
 	digi,adc-vref = <3000000>;
 };
 
@@ -75,6 +84,18 @@
 
 /* PWM1 (Raspberry PI Expansion header) */
 &pwm1 {
+	status = "okay";
+};
+
+&pwm6 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm6>;
+	status = "okay";
+};
+
+&pwm8 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm8>;
 	status = "okay";
 };
 
@@ -96,20 +117,29 @@
 	status = "okay";
 };
 
-/* USDHC2 (microSD) */
-&usdhc2 {
-	status = "okay";
-};
-
 /* Pin mux configuration */
 &iomuxc {
-	pinctrl-0 =  <&pinctrl_hog>, <&pinctrl_expansion>;
+	pinctrl-0 = <&pinctrl_hog>, <&pinctrl_expansion>;
 
 	imx6ul-ccimx6ul {
 		pinctrl_adc1: adc1grp {
 			fsl,pins = <
 				/* GPIO1_4/ADC1_IN4 (pin 7 of the expansion header) */
 				MX6UL_PAD_GPIO1_IO04__GPIO1_IO04        0xb0
+				/* GPIO1_5/ADC1_IN5 (pin 29 of the expansion header) */
+				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05        0xb0
+			>;
+		};
+	
+		pinctrl_pwm6: pwm6grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TDI__PWM6_OUT		0x10b0
+			>;
+		};
+	
+		pinctrl_pwm8: pwm8grp {
+			fsl,pins = <
+				MX6UL_PAD_JTAG_TRST_B__PWM8_OUT		0x10b0
 			>;
 		};
 
@@ -122,36 +152,44 @@
 				 * want to use as GPIO (requires disabling the
 				 * driver that manages them).
 				 */
-				/* GPIO3_4 */
+				/* Digital (LED) LATCH pin59 */
 				MX6UL_PAD_LCD_RESET__GPIO3_IO04		0xf030
-				/* JTAG_TDI/GPIO1_13 */
-				MX6UL_PAD_JTAG_TDI__GPIO1_IO13		0x1b0b0
-				/* GPIO3_10_PROT */
+				/* PWM6 CP2 pin41 */
+				/*MX6UL_PAD_JTAG_TDI__GPIO1_IO13	0x1b0b0 */
+				/* Сигнал чтения карты (OUT4) pin64 */
 				MX6UL_PAD_LCD_DATA05__GPIO3_IO10	0x1b0b0
-				/* JTAG_MOD/GPIO1_10 */
+				/* Датчик открытия дверей (IN4) pin33 */
 				MX6UL_PAD_JTAG_MOD__GPIO1_IO10		0x1b0b0
-				/* JTAG_TMS/GPIO1_11 */
+				/* Замок розетки (actuator) (OUT1) pin34 */
 				MX6UL_PAD_JTAG_TMS__GPIO1_IO11		0x1b0b0
-				/* GPIO3_12_PROT */
-				MX6UL_PAD_LCD_DATA07__GPIO3_IO12	0x1b0b0
-				/* PWM2/I2C3_SCL_PROT */
-				MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x1b0b0
-				/* RASPBERRY_29/GPIO5 */
-				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0
-				/* PWM4_PROT */
+				/* (Подтянут на +) не используется pin63 */
+				/*MX6UL_PAD_LCD_DATA07__GPIO3_IO12	0x1b0b0 */
+				/* Не используется pin68 */
+				/* MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x1b0b0 */
+				/* ADC CP 1 (i.MX6UL ADC channel 5) pin18 */
+				/* MX6UL_PAD_GPIO1_IO05__GPIO1_IO05	0x1b0b0 */
+				/* Digital (LED) CLOCK pin61 */
 				MX6UL_PAD_LCD_DATA03__GPIO3_IO08	0x1b0b0
-				/* GPIO3_7/PWM3_PROT */
+				/* 3G Modem Power on/off PWM3 pin66 */
 				MX6UL_PAD_LCD_DATA02__GPIO3_IO07	0x1b0b0
-				/* JTAG_TDO/GPIO1_12 */
+				/* Замок розетки (actuator) (OUT2) pin39 */
 				MX6UL_PAD_JTAG_TDO__GPIO1_IO12		0x1b0b0
-				/* RASPBERRY_36/CSI_MCLK */
+				/* IRQ SPI2. Управление автоматом (OUT) pin14 */
 				MX6UL_PAD_CSI_MCLK__GPIO4_IO17		0x1b0b0
-				/* RASPBERRY_37/CSI_PIXCLK */
+				/* Управление OE для LED pin15 */
 				MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x1b0b0
-				/* JTAG_nTRST/GPIO1_15 */
-				MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15	0x1b0b0
-				/* JTAG_TCK/GPIO1_14 */
+				/* PWM CP1 chip2 pin42 */
+				/*MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15	0x1b0b0 */
+				/* IRQ FAULT (IN) pin40 */
 				MX6UL_PAD_JTAG_TCK__GPIO1_IO14		0x1b0b0
+				/* Датчик удар/вибрации (IN1) / CAN pin10 */
+				MX6UL_PAD_LCD_DATA08__GPIO3_IO13	0x1b0b0
+				/* Датчик температуры (IN2) / CAN pin11 */
+				MX6UL_PAD_LCD_DATA09__GPIO3_IO14	0x1b0b0
+				/* Кнопка замка бытовой розетки (IN3) pin21 */
+				MX6UL_PAD_CSI_VSYNC__GPIO4_IO19		0x1b0b0
+				/* IRQ SPI3 pin17 */
+				MX6UL_PAD_CSI_HSYNC__GPIO4_IO20		0x1b0b0
 			>;
 		};
 	};
