--- a/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dts
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dts
@@ -32,20 +32,6 @@
 };
 
 /* ECSPI3 (as master - Raspberry PI Expansion header) */
-&ecspi3 {
-	status = "okay";
-
-	/*
-	 * Add your slave devices here. Next is an example of spidev.
-	 * Expect a harmless kernel warning if you enable spidev as slave.
-	 */
-	spidev@0 {
-		reg = <0>;
-		compatible = "spidev";
-		spi-max-frequency = <1000000>;
-	};
-};
-
 &ecspi2 {
 	status = "okay";
 
@@ -96,6 +82,11 @@
 &pwm8 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm8>;
+	status = "okay";
+};
+
+/* UART2 */
+&uart2 {
 	status = "okay";
 };
 
