--- a/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ccimx6ulstarter.dtsi
@@ -16,14 +16,6 @@
 };
 
 /* ECSPI3 (Raspberry PI Expansion header) */
-&ecspi3 {
-	num-cs = <1>;
-	cs-gpios = <&gpio1 20 GPIO_ACTIVE_LOW>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_ecspi3_master>;
-	status = "disabled";
-};
-
 &ecspi2 {
 	num-cs = <1>;
 	cs-gpios = <&gpio4 22 GPIO_ACTIVE_LOW>;
@@ -97,6 +89,13 @@
 	status = "disabled";
 };
 
+/* UART2 */
+&uart2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart2>;
+	status = "disabled";
+};
+
 /* UART4 (Raspberry PI Expansion header) */
 &uart4 {
 	pinctrl-names = "default";
@@ -130,26 +129,6 @@
 	pinctrl-0 = <&pinctrl_hog>;
 
 	imx6ul-ccimx6ul {
-		pinctrl_ecspi3_master: ecspi3grp1 {
-			fsl,pins = <
-				MX6UL_PAD_UART2_RX_DATA__ECSPI3_SCLK	0x10b0
-				MX6UL_PAD_UART2_CTS_B__ECSPI3_MOSI	0x10b0
-				MX6UL_PAD_UART2_RTS_B__ECSPI3_MISO	0x10b0
-				MX6UL_PAD_UART2_TX_DATA__GPIO1_IO20	0x10b0 /* Chip Select */
-				/*MX6UL_PAD_LCD_DATA01__GPIO3_IO06	0x10b0 /* Chip Select */
-				/*MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x10b0 /* Chip Select */
-			>;
-		};
-
-		pinctrl_ecspi3_slave: ecspi3grp2 {
-			fsl,pins = <
-				MX6UL_PAD_UART2_RX_DATA__ECSPI3_SCLK	0x10b0
-				MX6UL_PAD_UART2_CTS_B__ECSPI3_MOSI	0x10b0
-				MX6UL_PAD_UART2_RTS_B__ECSPI3_MISO	0x10b0
-				MX6UL_PAD_UART2_TX_DATA__ECSPI3_SS0	0x10b0 /* Chip Select */
-			>;
-		};
-
 		pinctrl_ecspi2_master: ecspi2grp1 {
 			fsl,pins = <
 				MX6UL_PAD_CSI_DATA00__ECSPI2_SCLK	0x10b0
@@ -209,6 +188,13 @@
 		pinctrl_pwm1: pwm1grp {
 			fsl,pins = <
 				MX6UL_PAD_LCD_DATA00__PWM1_OUT		0x10b0
+			>;
+		};
+
+		pinctrl_uart2: uart2grp {
+			fsl,pins = <
+				MX6UL_PAD_UART2_TX_DATA__UART2_DCE_TX	0x1b0b1
+				MX6UL_PAD_UART2_RX_DATA__UART2_DCE_RX	0x1b0b1
 			>;
 		};
 
